Update UI: navbar, footer

--- a/Bilinguals/Views/Shared/_LoginPartial.cshtml
+++ b/Bilinguals/Views/Shared/_LoginPartial.cshtml
@@ -6,19 +6,39 @@
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
-
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                @Html.ActionLink(User.Identity.GetFullName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
-            </li>
-            <li class="nav-item"><a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Đăng xuất</a></li>
-        </ul>
+        <div class="dropdown">
+            <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="d-flex align-items-center">
+                    <i class="bi bi-person-fill me-2"></i>
+                    <span class="small">
+                        @Html.ActionLink(User.Identity.GetFullName(), "Index", "Manage", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", title = "Manage", @class = "" })
+                </span>
+                </span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <li><button class="dropdown-item" type="button"><i class="bi bi-person-lines-fill me-1"></i> Thông tin cá nhân</button></li>
+                @if (User.IsInRole("Administrator"))
+                {
+                    <li><button class="dropdown-item" type="button"><i class="bi bi-emoji-sunglasses me-1"></i> Administrator</button></li>
+                }
+                <li><a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-box-arrow-left me-1"></i> Đăng xuất</a></li>
+            </ul>
+        </div>
     }
 }
 else
 {
-    <ul class="nav navbar-nav">
-        <li class="nav-item">@Html.ActionLink("Đăng ký", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
-        <li class="nav-item">@Html.ActionLink("Đăng nhập", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
-    </ul>
+    <div class="dropdown">
+        <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+            <span class="d-flex align-items-center">
+                <i class="bi bi-person-fill me-2"></i>
+                <span class="small">Tài Khoản</span>
+            </span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li><button class="dropdown-item" type="button"><i class="bi bi-person-check-fill me-1"></i> @Html.ActionLink("Đăng nhập", "Login", "Account", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", id = "loginLink"})</button></li>
+            <li><button class="dropdown-item" type="button"><i class="bi bi-person-plus-fill me-1"></i> @Html.ActionLink("Đăng ký", "Register", "Account", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", id = "registerLink"})</button></li>
+            <li><button class="dropdown-item" type="button">Something else here</button></li>
+        </ul>
+    </div>
 }
