--- a/Bilinguals/Views/Shared/_Layout.cshtml
+++ b/Bilinguals/Views/Shared/_Layout.cshtml
@@ -7,51 +7,68 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="~/Content/css/custom-navbar.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            @Html.ActionLink("MY BILINGUALS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+        <div class="container px-5">
+            <a class="navbar-brand fw-bold" href="~/">THƯ VIỆN TIẾNG ANH</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="bi-list"></i>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">@Html.ActionLink("Trang học của tôi", "Index", "Learn", null, new { @class = "nav-link" })</li>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                     <li class="nav-item">@Html.ActionLink("Đoạn hội thoại", "Index", "Dialogs", null, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Giới thiệu", "About", "Home", null, new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Động từ bất quy tắc", "", "", null, new { @class = "nav-link" })</li>
                     <li class="nav-item">
-                        @if (User.IsInRole("Administrator"))
-                        {
-                            @Html.ActionLink("Admin", "", "", null, new { @class = "nav-link" })
-                        }
+                        <div class="dropdown">
+                            <a style="cursor: pointer;" class="nav-link dropdown-toggle" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                                Kho lưu trữ
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                <li><a class="dropdown-item" href="~/groups/mysentence">Câu đã lưu</a></li>
+                                <li><button class="dropdown-item" type="button">Từ vựng</button></li>
+                                <li><a class="dropdown-item" href="~/dialogs/mydialog">Hội thoại đã lưu</a></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
-
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </nav>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Duy Phuc To</p>
-        </footer>
-    </div>
+    <!-- Body-->
+    <header class="masthead">
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                @RenderBody()
+            </div>
+        </div>
+    </header>
 
+    <!-- Footer-->
+    <footer class="bg-black text-center py-5">
+        <div class="container px-5">
+            <div class="text-white-50 small">
+                <p>&copy; @DateTime.Now.Year - Duy Phuc To</p>
+                <a href="#!">Skyper</a>
+                <span class="mx-1">&middot;</span>
+                <a href="#!">Facebook</a>
+                <span class="mx-1">&middot;</span>
+                <a href="#!">Instagram</a>
+            </div>
+        </div>
+    </footer>
 
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 
     <script src="~/Scripts/jquery.blockUI.js"></script>
-
     <script type="text/javascript">
 
         //https://jquery.malsup.com/block/#demos
