--- a/Bilinguals/Views/Dialogs/Details.cshtml
+++ b/Bilinguals/Views/Dialogs/Details.cshtml
@@ -59,13 +59,12 @@
                     <button type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-primary" : "primary") btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="bi bi-@(!item.UserSentenceId.HasValue ? "bookmark-plus":"bookmark-check")"></span> <span id="gn">@item.GroupName</span>
                     </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <ul class="dropdown-menu savedropdown" aria-labelledby="dropdownMenuSave">
                         <li><a href="#" class="dropdown-item create" data-bs-toggle="modal" data-bs-target="#bsModal">Add to new list</a></li>
                         <li><a class="dropdown-item remove" href="#">Remove</a></li>
                         <li><hr class="dropdown-divider"></li>
                     </ul>
                 </div>
-
             </td>
         </tr>
     }
@@ -98,6 +97,5 @@
         $(function () {
             Main.init();
         });
-
     </script>
 }
