--- a/Bilinguals/Content/Site.css
+++ b/Bilinguals/Content/Site.css
@@ -1,5 +1,8 @@
-﻿body {
-    padding-bottom: 20px;
+﻿@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital@1&display=swap');
+
+body {
+    background-color: #f8f9fa;
+    font-family: 'Balsamiq Sans', cursive;
 }
 
 /* Set padding to keep content from hitting the edges */
