--- a/Bilinguals/Views/Shared/_LoginPartial.cshtml
+++ b/Bilinguals/Views/Shared/_LoginPartial.cshtml
@@ -9,19 +9,19 @@
         <div class="dropdown">
             <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="d-flex align-items-center">
-                    <i class="bi bi-person-fill me-2"></i>
-                    <span class="small">
+                    <i style=" font-size: 18px;" class="bi bi-person-fill me-2"></i>
+                    <span class="small me-2">
                         @Html.ActionLink(User.Identity.GetFullName(), "Index", "Manage", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", title = "Manage", @class = "" })
-                </span>
+                    </span>
                 </span>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <li><button class="dropdown-item" type="button"><i class="bi bi-person-lines-fill me-1"></i> Thông tin cá nhân</button></li>
+                <li><button class="dropdown-item" type="button"><i class="bi bi-person-lines-fill me-2"></i>Profile</button></li>
                 @if (User.IsInRole("Administrator"))
                 {
-                    <li><button class="dropdown-item" type="button"><i class="bi bi-emoji-sunglasses me-1"></i> Administrator</button></li>
+                    <li><button class="dropdown-item" type="button"><i class="bi bi-emoji-sunglasses me-2"></i> Administrator</button></li>
                 }
-                <li><a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-box-arrow-left me-1"></i> Đăng xuất</a></li>
+                <li><a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-box-arrow-left me-2"></i>Log out</a></li>
             </ul>
         </div>
     }
@@ -29,16 +29,15 @@
 else
 {
     <div class="dropdown">
-        <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenuAcc" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="d-flex align-items-center">
-                <i class="bi bi-person-fill me-2"></i>
-                <span class="small">Tài Khoản</span>
+                <i style=" font-size: 18px;" class="bi bi-person-fill me-2"></i>
+                <span class="small me-2">Account</span>
             </span>
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <li><button class="dropdown-item" type="button"><i class="bi bi-person-check-fill me-1"></i> @Html.ActionLink("Đăng nhập", "Login", "Account", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", id = "loginLink"})</button></li>
-            <li><button class="dropdown-item" type="button"><i class="bi bi-person-plus-fill me-1"></i> @Html.ActionLink("Đăng ký", "Register", "Account", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", id = "registerLink"})</button></li>
-            <li><button class="dropdown-item" type="button">Something else here</button></li>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuAcc">
+            <li><button class="dropdown-item" type="button"><i class="bi bi-person-check-fill me-1"></i> @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", id = "loginLink"})</button></li>
+            <li><button class="dropdown-item" type="button"><i class="bi bi-person-plus-fill me-1"></i> @Html.ActionLink("Sign up", "Register", "Account", routeValues: null, htmlAttributes: new { style = "color: inherit;text-decoration:none;", id = "registerLink"})</button></li>
         </ul>
     </div>
 }
