--- a/Bilinguals/Content/css/custom-navbar.css
+++ b/Bilinguals/Content/css/custom-navbar.css
@@ -19,7 +19,7 @@
 
 
     #mainNav .dropdown-item:hover {
-        background: #4d4d4d;
+        background: #092139;
         color: white;
         transition: 0.3s ease-in-out;
     }
@@ -45,16 +45,17 @@
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-    color: #212529;
+    color: #092139;
 }
 
     #mainNav .navbar-nav .nav-item .nav-link:hover {
-        color: #6c757d;
+        opacity: 0.4;
     }
 
     #mainNav .navbar-nav .nav-item .nav-link.active {
         color: #2937f0;
     }
+
 
 footer a {
     color: rgba(255, 255, 255, 0.5);
