--- a/Bilinguals/Views/Shared/_Layout.cshtml
+++ b/Bilinguals/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                    <li class="nav-item"><span>@Html.ActionLink("All Dialogs", "Index", "Dialogs", null, new { @class = "nav-link" })</span></li>
+                    <li class="nav-item"><span>@Html.ActionLink("All Dialogs", "Index", "Dialogs", null, new { @class = "customitem nav-link" })</span></li>
                     <li class="nav-item"><span>@Html.ActionLink("Irregular Verbs", "", "", null, new { @class = "nav-link" })</span></li>
                     <li class="nav-item">
                         <div class="dropdown">
@@ -51,7 +51,7 @@
     </main>
 
     <!-- Footer-->
-    <footer class="footer mt-auto bg-black text-center py-2">
+    <footer class="footer mt-auto bg-custom1 text-center py-2">
         <div class="container">
             <div class="text-white-50 small">
                 <p>&copy; @DateTime.Now.Year - Duy Phuc To</p>
