--- a/Bilinguals/Views/Shared/_LoginPartial.cshtml
+++ b/Bilinguals/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     {
         @Html.AntiForgeryToken()
         <div class="dropdown">
-            <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-outline-custom1 rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="d-flex align-items-center">
                     <i style=" font-size: 18px;" class="bi bi-person-fill me-2"></i>
                     <span class="small me-2">
@@ -29,7 +29,7 @@
 else
 {
     <div class="dropdown">
-        <button class="btn btn-outline-dark rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenuAcc" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-custom1 rounded-pill px-3 mb-2 mb-lg-0 dropdown-toggle" type="button" id="dropdownMenuAcc" data-bs-toggle="dropdown" aria-expanded="false">
             <span class="d-flex align-items-center">
                 <i style=" font-size: 18px;" class="bi bi-person-fill me-2"></i>
                 <span class="small me-2">Account</span>
