--- a/Bilinguals/Views/Groups/Create.cshtml
+++ b/Bilinguals/Views/Groups/Create.cshtml
@@ -5,38 +5,26 @@
     var returnUrl = Request.QueryString["returnUrl"];
 }
 
-<div class="modal-header">
-    <h4 class="modal-title" id="bsModalLabel">@ViewBag.Title</h4>
-    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-</div>
-
 <div class="modal-body">
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "my-form" }))
+   @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "my-form", @class = "needs-validation", novalidate = "novalidate" }))
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(Model => Model.Description)
-            @Html.HiddenFor(Model => Model.DateModified)
+        @Html.HiddenFor(Model => Model.Description)
+        @Html.HiddenFor(Model => Model.DateModified)
 
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control py-2", required = "required", placeholder = "Enter group name", autocomplete = "off" } })
+        <div class="valid-feedback py-2">
+            Looks good!
         </div>
     }
 </div>
 
 <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-    <button type="submit" form="my-form" class="btn btn-primary">Save</button>
+    <button type="button" class="btn btn-cl btn-secondary" data-bs-dismiss="modal">Close</button>
+    <button type="submit" form="my-form" class="btn btn-custom1">Save</button>
 </div>
 
+<script src="~/Scripts/Components/bootstrap5-validation.js"></script>
 
 
