--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
     var searchText = Request.QueryString["SearchText"];
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link href="~/Content/css/home-index.css" rel="stylesheet" />
+
 <div class="row gx-5 align-items-center">
     <div class="aftersearch text-center">
         <img src="https://github.com/de9vp/Contact/blob/master/images/why-us.png?raw=true" style="width: 274px" alt="">
@@ -15,10 +17,10 @@
     </div>
     <form>
         <div class="row mb-3 justify-content-center">
-            <input type="text" class="form-control text-center rounded-pill w-50" id="searchText" name="searchText" value="@searchText" placeholder="Enter the sentence or vocabulary">
+            <input style="width:30rem" type="text" class="form-control text-center rounded-pill" id="searchText" name="searchText" value="@searchText" placeholder="Enter the sentence or vocabulary">
         </div>
         <div class="row mb-3 justify-content-center">
-            <button type="submit" style="width: 150px;" class="btn btn-custom1 rounded-pill"> <span class="bi-search me-2"></span>Search</button>
+            <button type="submit" style="width: 8rem;" class="btn btn-custom1 rounded-pill"> <span class="bi-search me-2"></span>Search</button>
         </div>
     </form>
 </div>
@@ -31,7 +33,7 @@
 {
     <div class="row gx-5">
 
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Search by Sentence</button>
             </li>
@@ -45,22 +47,23 @@
                 <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Search by My Vocabulary</button>
             </li>
         </ul>
-        <div style="background-color: white;" class="tab-content" id="pills-tabContent">
+        <div class="tab-content" id="pills-tabContent">
 
             @* Tra câu *@
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                <table class="table">
+                <table class="table mt-4">
                     <tbody>
-                       @foreach (var item in Model)
-                       {
-                            <tr>
-                                <td class="row">
-                                    <span><i class="bi bi-chat-square-quote-fill me-2"></i>@item.EnText</span>
-                                    <span style="font-family: 'Nunito Sans', sans-serif; opacity: 0.8;">&emsp;@item.ViText</span>
-                                    <span style="font-family: 'Nunito Sans', sans-serif; opacity: 0.4;">&emsp;&emsp;&emsp;<i class="bi bi-file-image-fill me-2"></i>@item.DialogName</span>
-                                    <span style="font-size: 13px;opacity: 0.4;">&emsp;&emsp;&emsp;&emsp;&emsp;<i class="bi bi-stopwatch-fill me-2"></i>Last updated on @item.DateModified</span>
+                        @foreach (var item in Model)
+                        {
+                            <tr class="row">
+                                <td class="row col-8">
+                                    <span class="entext"><i class="bi bi-chat-square-quote-fill me-2"></i>@item.EnText</span>
+                                    <span class="vitext mb-2">&emsp;<i class="bi bi-arrow-return-right me-2"></i>@item.ViText</span>
+                                    <span class="timeupdated">&emsp;&emsp;&ensp;&nbsp;<i class="bi bi-clock me-1"></i>Last updated on @(!item.DateModified.HasValue ? null : item.DateModified?.ToString("dd/MM/yyyy"))</span>
+                                    <span class="dialogname">&emsp;&emsp;<i class="bi bi-card-list me-2"></i>@item.DialogName</span>
+                                    <span>.</span>
                                 </td>
-                                <td>
+                                <td class="col-4">
                                     <div class="btn-group dropstart">
                                         <button type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-primary" : "primary") btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="bi bi-@(!item.UserSentenceId.HasValue ? "bookmark-plus":"bookmark-check")"></span> <span id="gn">@item.GroupName</span>
@@ -73,11 +76,13 @@
                                     </div>
                                 </td>
                             </tr>
-                       }
+                        }
                     </tbody>
                 </table>
                 <div id="paging" style="text-align: center">
-                    Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+                    <span class="badge rounded-pill bg-custom2">
+                        &nbsp; Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount &nbsp;
+                    </span>
                     @Html.PagedListPager(Model, pageIndex => Url.Action("Index", new { pageIndex, searchText = searchText }))
                 </div>
             </div>
@@ -93,11 +98,19 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="bsModal" tabindex="-1">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content"></div>
+        </div>
+    </div>
+
     @section scripts {
         <script type="text/javascript">
             $(function () {
                 setTimeout(function myfunction() {
-                    $('.aftersearch').css('display', 'none').css('transition','all 0.3s cubic-bezier(0.37, 0.01, 0.06, 0.14) 0s')
+                    $('.aftersearch').css('display', 'none').css('transition', 'all 0.3s cubic-bezier(0.37, 0.01, 0.06, 0.14) 0s')
                 }, 2000);
             })
         </script>
